# AIsapp

./: .gitignore  README.md  ideas.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
app/aisapp/: apps.py  models.py  permissions.py  signals.py  urls.py
app/aisapp/migrations/: 0001_initial.py
app/aisapp/models/: calendar.py  serializers.py  todo.py
app/aisapp/templates/aisapp/: home.html
app/aisapp/views/: calendar.py  user.py
app/aisapp_frontend/: apps.py  package-lock.json  package.json  tsconfig.json  urls.py
app/aisapp_frontend/src/: main.ts
app/aisapp_frontend/src/components/: appCard.ts  formComponents.ts  sequentialSlider.ts
app/aisapp_frontend/src/handlers/: formHandlers.ts  slideHandlers.ts
app/aisapp_frontend/src/pages/: home.ts  index.ts  login.ts  register.ts  setup.ts  utils.ts
app/aisapp_frontend/src/utils/: utils.ts
app/aisapp_frontend/static/aisapp/: AppCard.js  LoginForm.js  RegisterForm.js  api.js  common.css  home.css  login.css  main.js  register.css  user_home.html  utils.js
app/aisapp_frontend/templates/aisapp/: home.html  index.html
app/app/: settings.py  urls.py
app/frontend/: index.html  package-lock.json  package.json
app/frontend/src/: main.ts
app/frontend/src/components/: appCard.ts  formComponents.ts  sequentialSlider.ts
app/frontend/src/handlers/: formHandlers.ts
app/frontend/src/pages/: index.ts  (+2 more)
backend/: build.sbt
frontend/: package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: app.css  app.d.ts  app.html
frontend/src/routes/: +layout.svelte  +page.svelte
(+47 files in other folders)
