[tool.poetry]
name = "aisapp"
version = "0.1.0"
description = ""
authors = ["Chidi Nweke"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
django-extensions = "^3.2.3"
black = "^23.3.0"
flake8 = "^6.0.0"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
